<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerVertical="true"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/label_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dip"
        android:text="@string/title" />

    <EditText
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:padding="8dip"
        android:singleLine="true" />

    <TextView
        android:id="@+id/label_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dip"
        android:text="@string/description" />

    <EditText
        android:id="@+id/description"
    	android:inputType="textMultiLine" 
    	android:lines="4"
    	android:minLines="4"
    	android:gravity="top|left"
    	android:maxLines="6"
    	android:layout_height="wrap_content" 
    	android:layout_width="fill_parent" 
    	android:scrollbars="vertical"
	/>

    <Button
        android:id="@+id/add"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />
</LinearLayout>
